src/components/MyWork/Projects/TreasureHunt/TreasureHunt.module.css
.Card {
  margin: 100px;
  margin-top: 20px;
  height: 700px;
  width: 1000px;
  background-color: var(--treasureHuntColor2);
  box-shadow: 0px 10px 20px 4px rgba(0, 0, 0, 0.4);
  transition: transform 0.3s;
  animation: shadowRemove 0.3s forwards;
  font-family: sans-serif;
  filter: grayscale(0);
  border-radius: 10px;
}

.Layout {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 3%;
}

.Scrollabe {
  overflow-y: scroll;
  height: 100%;
  border-radius: 10px 10px 0 0;
}

.TextArea {
  width: 80%;
  color: var(--mainTextColor);
  margin: auto;
  margin-top: 30px;
  border: 1px solid var(--mainTextColor);
  padding: 20px 40px;
}

.HeadLine {
  color: var(--mainTextColor);
  font-size: 3rem;
  font-family: "Cabin Sketch", cursive;
}

.Card:hover {
  transform: translateY(-10px);
  animation: shadowExpand 0.3s forwards;
}

.Image {
  height: 500px;
  width: 1000px;
  cursor: pointer;
  border-radius: 10px 10px 0 0;
  box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.2);
}

.Info {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  color: var(--mainTextColor);
}

.GitWebButtons a {
  width: 50%;
  height: 7%;
  position: absolute;
  bottom: 0;
  font-size: 1.5rem;
  cursor: pointer;
  border: none;
  background-color: var(--treasureHuntColor);
  color: var(--mainTextColor);
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: transform 0.3s;
  border-radius: 0 0 0 10px;
  box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.3);
  opacity: 100%;
}

.GitWebButtons a:nth-child(2) {
  right: 0;
  background-color: var(--treasureHuntColor3);
  border-radius: 0 0 10px 0;
}

.GitWebButtons a:hover {
  filter: brightness(80%);
}

.TechsLayout {
  color: var(--mainLightColor);
  display: flex;
  justify-content: space-evenly;
  font-size: 3rem;
  margin: 10px;
}

.Features {
  display: flex;
  flex-flow: wrap;
  align-items: center;
  justify-content: center;
}

.Features li {
  font-size: 1rem;
  border: 1px solid var(--mainLightColor);
  padding: 3px 6px 3px 6px;
  font-weight: 500;
  color: var(--mainLightColor);
  opacity: 0.7;
  list-style: none;
  margin: 10px 5px 0 5px;
}

.TextField {
  width: 85%;
  height: 30%;
  border: 1px solid var(--mainLightColor);
  opacity: 0.7;
  margin: 20px auto 20px auto;
  padding: 15px 30px;
  overflow-y: auto;
}

.TextField p {
  color: var(--mainLightColor);
  font-size: 1.3rem;
}

.SpaceBottom {
  height: 100px;
}

@keyframes shadowExpand {
  from {
    box-shadow: 0px 10px 20px 4px rgba(0, 0, 0, 0.4);
  }
  to {
    box-shadow: 0px 20px 20px 4px rgba(0, 0, 0, 0.4);
  }
}

@keyframes shadowRemove {
  from {
    box-shadow: 0px 20px 20px 4px rgba(0, 0, 0, 0.4);
  }
  to {
    box-shadow: 0px 10px 20px 4px rgba(0, 0, 0, 0.4);
  }
}

